# toy-diffusion

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini
.github/workflows/: pages.yml  test.yml
docs/: Gemfile  _config.yml  index.md  references.md
docs/_layouts/: default.html
docs/assets/css/: style.scss
etc/: custom.toml  default_config.toml  high_quality.toml  quick_test.toml
scripts/: config_manager.py  train.py
src/config/: __init__.py  base.py  config.py  config_loader.py
src/data/: __init__.py  config.py  data_interface.py  swiss_roll_generator.py
src/domain/: __init__.py  config.py  diffusion_model.py  noise_scheduler.py
src/exceptions/: __init__.py  exceptions.py
src/logger/: __init__.py  enums.py  interface.py  logging.py
src/training/: __init__.py  config.py  enums.py  scheduler_factory.py  trainer.py
src/visualization/: __init__.py  config.py  enums.py  gif_creator.py  plot_manager.py  visualizer.py
tests/: conftest.py  test_config.py  test_config_loader.py  test_data.py  test_domain.py  test_integration.py  test_scripts.py  test_training.py  test_visualization.py
tests/assets/: invalid_config.toml  minimal_config.toml  production_config.toml
tests/e2e/: test_complete_pipeline.py
tests/integration/: test_imports.py  test_training.py  test_visualization_imports.py
tests/unit/: test_config.py  test_data.py  test_domain.py
