[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toy-diffusion"
version = "0.1.0"
description = "Clean architecture toy diffusion model following SOLID principles"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "torch>=1.9.0",
    "numpy>=1.21.0",
    "matplotlib>=3.4.0",
    "tqdm>=4.62.0",
    "pillow>=8.3.0",
    "tomli>=2.0.0; python_version<'3.11'",
    "tomli-w>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.9",
    "mypy>=0.910",
    "isort>=5.9",
    "pre-commit>=2.20.0",
]
config = [
    # TOML dependencies are now in main dependencies since they're required
]
all = [
    "toy-diffusion[dev,config]",
]

[project.scripts]
diffusion-config = "scripts.config_manager:main"
diffusion-train = "scripts.train:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
